[package]
name = "mach_object"
version = "0.1.14"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Mach-O File Format Parser for Rust"
documentation = "http://flier.github.io/rust-macho/"
homepage = "http://flier.github.io/rust-macho/"
repository = "https://github.com/flier/rust-macho"
license = "Apache-2.0"
edition = "2018"

[features]
default = ["display"]
display = []
integration_tests = []

[dependencies]
log = "0.4"
libc = "0.2"
byteorder = "1.3"
failure = "0.1"
uuid = "0.8"
time = "0.1"
bitflags = "1.0"
lazy_static = "1.0"

[dev-dependencies]
pretty_env_logger = "0.3"
diff = "0.1"
structopt = "0.3"
memmap = "0.7"
hexplay = "0.2"
walkdir = "2.2"

[lib]
name = "mach_object"

[[example]]
name = "otool"
required-features = ["display"]
