[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Mach-O File Format Parser for Rust"
documentation = "http://flier.github.io/rust-macho/"
edition = "2018"
homepage = "http://flier.github.io/rust-macho/"
license = "Apache-2.0"
name = "mach_object"
repository = "https://github.com/flier/rust-macho"
version = "0.1.15"

[features]
default = ["display"]
display = []
integration_tests = []

[dependencies]
anyhow = "1"
log = "0.4"
libc = "0.2"
byteorder = "1.3"
thiserror = "1"
uuid = "0.8"
bitflags = "1.0"
lazy_static = "1.0"
time = {version = "0.3", features = ["formatting", "macros"]}

[dev-dependencies]
diff = "0.1"
hexplay = "0.2"
memmap = "0.7"
pretty_env_logger = "0.4"
structopt = "0.3"
walkdir = "2.2"

[lib]
name = "mach_object"

[[example]]
name = "otool"
required-features = ["display"]
