[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Mach-O File Format Parser for Rust"
documentation = "http://flier.github.io/rust-macho/"
edition = "2018"
homepage = "http://flier.github.io/rust-macho/"
license = "Apache-2.0"
name = "mach_object"
repository = "https://github.com/flier/rust-macho"
version = "0.1.16"

[features]
default = ["display"]
display = ["time"]
integration_tests = []

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
thiserror = "1.0"
uuid = "1.1"
time = {version = "0.3", features = ["formatting", "macros"], optional = true}

[dev-dependencies]
anyhow = "1.0"
diff = "0.1"
hexplay = "0.2"
memmap = "0.7"
pretty_env_logger = "0.4"
structopt = "0.3"
walkdir = "2.2"

[lib]
name = "mach_object"

[[example]]
name = "otool"
required-features = ["display"]
